JVM tuning for scripts